add letter atribut feature
