# src/letter-attribute-submission/dto/query-letter-attribute-submission.dto.ts
@@ -1,0 +1,31 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsNumber, IsOptional } from 'class-validator';
+import { PaginationQueryDto } from 'src/common/dto/pagination-query.dto';
+
+
+export class QueryLetterAttributeSubmissionDto extends PaginationQueryDto {
+  @ApiProperty({
+    description: 'ID dari letter attribute',
+    required: false,
+  })
+  @IsOptional()
+  @IsNumber()
+  letterAttributeId?: number;
+
+  @ApiProperty({
+    description: 'ID dari student letter submission',
+    required: false,
+  })
+  @IsOptional()
+  @IsNumber()
+  studentLetterSubmissionId?: number;
+
+  @ApiProperty({
+    description: 'ID dari general letter submission',
+    required: false,
+  })
+  @IsOptional()
+  @IsNumber()
+  generalLetterSubmissionId?: number;
+
+}
