# src/letter-attribute-submission/dto/update-letter-attribute-submission.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateLetterAttributeSubmissionDto } from './create-letter-attribute-submission.dto';
+
+export class UpdateLetterAttributeSubmissionDto extends PartialType(CreateLetterAttributeSubmissionDto) {}
