# src/letter-attribute/dto/update-letter-attribute.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateLetterAttributeDto } from './create-letter-attribute.dto';
+
+export class UpdateLetterAttributeDto extends PartialType(CreateLetterAttributeDto) {}
